# slp

./: .codeclimate.yml  .deepsource.toml  .envrc  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  Singularity  am.sh  average_calculation.py  average_metrics.sh  avg.py  avg_metrics.py  create_csv.py  dev-requirements.txt  eval.py  mkdocs.yml  mmenv  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  run.sh  runda.sh  runsource.sh  setup.py  tox.ini  versions.json
1.1.5/: 404.html  index.html
1.2.1/: 404.html
amazon/: bert.py  da.py  dacent.py  dacentvat.py  sourceonly.py  targetonly.py  targetonly2.py
configs/: best.mosei.rnn.symattn.rnn.mask.yml  best.mosei.rnn.symattn.rnn.yml  best.mosei.transformer.symattn.yml  best.mosei.transformer.yml  best.mosi.tune.yml  example.PLDataModuleFromCorpus.yml  example.PLDataModuleFromDatasets.yml  example.corpus.yml  example.yml  mosei.transformer.yml  mosei.yaml  mosei_feedback.yaml  mosei_feedback2.yaml  mosei_feedback_3way.yaml  mosei_feedback_3way_1.yaml  mosei_feedback_3way_coattention.yaml  mosei_feedback_3way_coattention2.yaml  mosei_feedback_3way_drop.yaml  mosei_feedback_3way_drop1.yaml  mosei_feedback_3way_drop2.yaml  mosei_feedback_3way_no_norm.yaml  mosei_feedback_3way_no_norm1.yaml  mosei_feedback_3way_no_norm2.yaml  mosei_feedback_3way_norm_audio.yaml  mosei_feedback_3way_norm_audio1.yaml  mosei_feedback_3way_norm_audio2.yaml  mosei_feedback_3way_norm_visual.yaml  mosei_feedback_3way_norm_visual1.yaml  mosei_feedback_3way_norm_visual2.yaml  mosei_feedback_3way_openface.yaml  mosei_feedback_3way_pretrained.yaml  mosei_feedback_3way_pretrained_false.yaml  mosei_feedback_3way_pretrained_false_no_feed.yaml  mosei_feedback_3way_pretrained_no_feed.yaml  mosei_feedback_3way_small.yaml  mosei_feedback_3way_small1.yaml  mosei_feedback_3way_small2.yaml  mosei_feedback_3way_uni.yaml  mosei_feedback_3way_uni1.yaml  mosei_feedback_3way_uni2.yaml  (+23 more)
configs_feedback/: attention.yaml  dot.yaml  full.yaml  h0.yaml  h0_grad.yaml  h0_grad32.yaml  h0_grad32_input_mmdrop.yaml  h0_grad32_lg.yaml  h0_grad32_noshuffle.yaml  h0_grad32_pad_front_no_pauses.yaml  h0_grad32_pad_kwlo.yaml  h0_grad32_pad_kwlo_no_pauses.yaml  h0_grad32_tav.yaml  h0_grad32_tav1.yaml  h0_grad32_tav_pad.yaml  h0_grad32_wtf.yaml  h0_grad_gated.yaml  h0_grad_large.yaml  h0_nofeedback.yaml  h0_nomask.yaml  h0_nommdrop.yaml  h0_notav.yaml  h0_sumsigmoid.yaml  hidden_rnn_feedback_mmdrop.yaml  no_feedback.yaml  no_feedback_full.yaml  no_feedback_mmdrop.yaml  no_feedback_mmdrop_alternative.yaml  no_feedback_norm.yaml  rnn.yaml  sigmoid.yaml  sigmoid_self.yaml  softmax.yaml  sum_rnn.yaml  sum_rnn1.yaml  sum_rnn_bn.yaml  sum_rnn_conv.yaml  sum_rnn_e2e.yaml  sum_rnn_linear.yaml  sum_rnn_mmdrop.05.yaml  (+16 more)
configs_makis/: audio_rnn.yaml  audio_text_rnn.yaml  audio_text_rnn_feedback.yaml  audio_text_rnn_feedback_grad.yaml  audio_visual_rnn.yaml  audio_visual_rnn_feedback.yaml  audio_visual_rnn_feedback_grad.yaml  baseline.yaml  baseline_120.yaml  baseline_3xmedium.yaml  baseline_4.yaml  baseline_4x120.yaml  (+20 more)
(+307 files in other folders)
