[tool.poetry]
name = "slp"
version = "1.0.0"
description = "Speech, Language and Multimodal Processing models and utilities in PyTorch"
authors = ["Giorgos Paraskevopoulos <geopar@central.ntua.gr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
numpy = "^1.20.1"
pytorch-ignite = "0.2.0"
pytorch-nlp = "0.4.1"
transformers = "2.0.0"
requests = "^2.25.1"
rpdb = "^0.1.6"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
spacy = "^3.0.3"
tqdm = "^4.57.0"
toolz = "^0.11.1"
torchvision = "^0.8.2"
ujson = "^4.0.2"
sentencepiece = "^0.1.95"
validators = "^0.18.2"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0-py3-none-any.whl"}
nltk = "^3.5"
loguru = "^0.5.3"
pytorch-lightning = "^1.2.0"
wandb = "^0.10.20"
omegaconf = "^2.0.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
mypy = "^0.812"
nox = "^2019.5.30"
ipdb = "^0.13.4"
ipython = "^7.20.0"
jupyter = "^1.0.0"
rope = "^0.18.0"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
